// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Main screen check snapshot with example data 1`] = `
Object {
  "card": Object {
    "log_id": "mainScreen",
    "states": Array [
      Object {
        "div": Object {
          "background": Array [
            Object {
              "color": "#121316",
              "type": "solid",
            },
          ],
          "height": Object {
            "type": "match_parent",
          },
          "items": Array [
            Object {
              "height": Object {
                "type": "match_parent",
              },
              "items": Array [
                Object {
                  "height": Object {
                    "type": "match_parent",
                  },
                  "items": Array [
                    Object {
                      "background": Array [
                        Object {
                          "color": "#31AD54",
                          "type": "solid",
                        },
                      ],
                      "border": Object {
                        "corner_radius": 28,
                      },
                      "height": Object {
                        "type": "match_parent",
                        "weight": 1,
                      },
                      "id": "main_screen_card_0_0",
                      "items": Array [
                        Object {
                          "font_size": 32,
                          "font_weight": "medium",
                          "line_height": 40,
                          "text": "Рекомендуем",
                          "text_color": "#80ffffff",
                          "type": "text",
                        },
                        Object {
                          "delimiter_style": Object {
                            "color": "#0fff",
                          },
                          "height": Object {
                            "type": "match_parent",
                          },
                          "type": "separator",
                        },
                        Object {
                          "alignment_horizontal": "center",
                          "border": Object {
                            "corner_radius": 18,
                          },
                          "height": Object {
                            "type": "fixed",
                            "value": 220,
                          },
                          "image_url": "1",
                          "type": "image",
                          "width": Object {
                            "type": "fixed",
                            "value": 220,
                          },
                        },
                        Object {
                          "font_size": 32,
                          "font_weight": "medium",
                          "line_height": 40,
                          "margins": Object {
                            "top": 24,
                          },
                          "text": "Плейлист дня",
                          "text_alignment_horizontal": "center",
                          "text_color": "#fff",
                          "type": "text",
                        },
                        Object {
                          "font_size": 32,
                          "font_weight": "medium",
                          "line_height": 40,
                          "margins": Object {
                            "top": 4,
                          },
                          "text": "Обновлен сегодня",
                          "text_alignment_horizontal": "center",
                          "text_color": "#80ffffff",
                          "type": "text",
                        },
                        Object {
                          "delimiter_style": Object {
                            "color": "#0fff",
                          },
                          "height": Object {
                            "type": "match_parent",
                          },
                          "type": "separator",
                        },
                        Object {
                          "alignment_horizontal": "center",
                          "height": Object {
                            "type": "fixed",
                            "value": 79,
                          },
                          "image_url": "https://dialogs.s3.yandex.net/smart_displays/player/play.png?v=1",
                          "margins": Object {
                            "bottom": 8,
                          },
                          "type": "image",
                          "width": Object {
                            "type": "fixed",
                            "value": 79,
                          },
                        },
                      ],
                      "paddings": Object {
                        "bottom": 24,
                        "left": 24,
                        "right": 24,
                        "top": 24,
                      },
                      "type": "container",
                      "width": Object {
                        "type": "match_parent",
                        "weight": 1,
                      },
                    },
                  ],
                  "margins": Object {
                    "top": 0,
                  },
                  "type": "container",
                  "width": Object {
                    "type": "match_parent",
                  },
                },
              ],
              "margins": Object {
                "left": 0,
              },
              "type": "container",
              "width": Object {
                "type": "match_parent",
              },
            },
            Object {
              "height": Object {
                "type": "match_parent",
              },
              "items": Array [
                Object {
                  "height": Object {
                    "type": "match_parent",
                  },
                  "items": Array [
                    Object {
                      "actions": Array [
                        Object {
                          "log_id": "loader_click",
                          "url": "dialog://?directives=%5B%7B%22type%22%3A%22client_action%22%2C%22name%22%3A%22show_view%22%2C%22payload%22%3A%7B%22layer%22%3A%7B%22content%22%3A%7B%7D%7D%2C%22div2_card%22%3A%7B%22body%22%3A%7B%22templates%22%3A%7B%7D%2C%22card%22%3A%7B%22log_id%22%3A%22loader%22%2C%22states%22%3A%5B%7B%22state_id%22%3A0%2C%22div%22%3A%7B%22type%22%3A%22container%22%2C%22height%22%3A%7B%22type%22%3A%22match_parent%22%2C%22weight%22%3A1%7D%2C%22items%22%3A%5B%7B%22type%22%3A%22gif%22%2C%22alignment_horizontal%22%3A%22center%22%2C%22alignment_vertical%22%3A%22center%22%2C%22gif_url%22%3A%22https%3A%2F%2Fdialogs.s3.yandex.net%2Fsmart_displays%2Floaders%2Fspinner.gif%22%2C%22height%22%3A%7B%22type%22%3A%22fixed%22%2C%22value%22%3A250%7D%2C%22width%22%3A%7B%22type%22%3A%22fixed%22%2C%22value%22%3A250%7D%7D%2C%7B%22type%22%3A%22container%22%2C%22alignment_horizontal%22%3A%22right%22%2C%22alignment_vertical%22%3A%22top%22%2C%22items%22%3A%5B%7B%22type%22%3A%22image%22%2C%22actions%22%3A%5B%7B%22log_id%22%3A%22close_fullscreen%22%2C%22url%22%3A%22centaur%3A%2F%2Flocal_command%3Flocal_commands%3D%5B%257B%2522command%2522%253A%2522close_layer%2522%252C%2522layer%2522%253A%2522CONTENT%2522%252C%2522stop_conversation%2522%253Atrue%257D%5D%22%7D%5D%2C%22alignment_horizontal%22%3A%22right%22%2C%22background%22%3A%5B%7B%22type%22%3A%22solid%22%2C%22color%22%3A%22%231affffff%22%7D%5D%2C%22border%22%3A%7B%22corner_radius%22%3A20%7D%2C%22height%22%3A%7B%22type%22%3A%22fixed%22%2C%22value%22%3A88%7D%2C%22image_url%22%3A%22https%3A%2F%2Fyastatic.net%2Fs3%2Fdialogs%2Fsmart_displays%2Ficons%2Fclose_wt_border.png%22%2C%22margins%22%3A%7B%22top%22%3A36%2C%22right%22%3A36%7D%2C%22paddings%22%3A%7B%22top%22%3A22%2C%22right%22%3A22%2C%22left%22%3A22%2C%22bottom%22%3A22%7D%2C%22preload_required%22%3A1%2C%22scale%22%3A%22fill%22%2C%22width%22%3A%7B%22type%22%3A%22fixed%22%2C%22value%22%3A88%7D%7D%5D%7D%5D%2C%22orientation%22%3A%22overlap%22%2C%22width%22%3A%7B%22type%22%3A%22match_parent%22%2C%22weight%22%3A1%7D%7D%7D%5D%2C%22variable_triggers%22%3A%5B%5D%2C%22variables%22%3A%5B%5D%7D%7D%7D%2C%22do_not_show_close_button%22%3Anull%2C%22inactivity_timeout%22%3A%22Infinity%22%7D%7D%5D",
                        },
                        Object {
                          "log_id": "discovery.mainscreen.execute",
                          "url": "dialog://text_command?query=%D0%A0%D0%B0%D1%81%D1%81%D0%BA%D0%B0%D0%B6%D0%B8%20%D0%BD%D0%BE%D0%B2%D0%BE%D1%81%D1%82%D0%B8%20%D1%82%D0%B5%D1%85%D0%BD%D0%BE%D0%BB%D0%BE%D0%B3%D0%B8%D0%B9",
                        },
                      ],
                      "background": Array [
                        Object {
                          "content_alignment_horizontal": "right",
                          "image_url": "https://dialogs.s3.yandex.net/smart_displays/discovery/news.png",
                          "scale": "fill",
                          "type": "image",
                        },
                      ],
                      "border": Object {
                        "corner_radius": 28,
                      },
                      "height": Object {
                        "type": "match_parent",
                        "weight": 1,
                      },
                      "id": "main_screen_card_0_1",
                      "items": Array [
                        Object {
                          "items": Array [
                            Object {
                              "font_size": 32,
                              "font_weight": "medium",
                              "line_height": 40,
                              "text": "Новости",
                              "text_color": "#80ffffff",
                              "type": "text",
                            },
                          ],
                          "orientation": "horizontal",
                          "type": "container",
                        },
                        Object {
                          "delimiter_style": Object {
                            "color": "#0fff",
                          },
                          "height": Object {
                            "type": "match_parent",
                          },
                          "type": "separator",
                        },
                        Object {
                          "font_size": 28,
                          "font_weight": "medium",
                          "line_height": 36,
                          "text": "Расскажи новости технологий",
                          "text_color": "#e6ffffff",
                          "type": "text",
                        },
                      ],
                      "paddings": Object {
                        "bottom": 24,
                        "left": 24,
                        "right": 24,
                        "top": 24,
                      },
                      "type": "container",
                      "width": Object {
                        "type": "match_parent",
                        "weight": 1,
                      },
                    },
                  ],
                  "margins": Object {
                    "top": 0,
                  },
                  "type": "container",
                  "width": Object {
                    "type": "match_parent",
                  },
                },
                Object {
                  "height": Object {
                    "type": "match_parent",
                  },
                  "items": Array [
                    Object {
                      "actions": Array [],
                      "background": Array [
                        Object {
                          "color": "#1aeaf6ec",
                          "type": "solid",
                        },
                      ],
                      "border": Object {
                        "corner_radius": 28,
                      },
                      "height": Object {
                        "type": "match_parent",
                        "weight": 1,
                      },
                      "id": "main_screen_card_1_1",
                      "items": Array [
                        Object {
                          "items": Array [
                            Object {
                              "font_size": 32,
                              "font_weight": "medium",
                              "line_height": 40,
                              "text": "Москва",
                              "text_color": "#80ffffff",
                              "type": "text",
                            },
                          ],
                          "orientation": "horizontal",
                          "type": "container",
                        },
                        Object {
                          "delimiter_style": Object {
                            "color": "#0fff",
                          },
                          "height": Object {
                            "type": "match_parent",
                          },
                          "type": "separator",
                        },
                        Object {
                          "content_alignment_horizontal": "left",
                          "content_alignment_vertical": "center",
                          "items": Array [
                            Object {
                              "font_size": 90,
                              "font_weight": "medium",
                              "line_height": 90,
                              "text": "–3°",
                              "text_color": "#fff",
                              "type": "text",
                              "width": Object {
                                "type": "wrap_content",
                              },
                            },
                            Object {
                              "height": Object {
                                "type": "fixed",
                                "value": 100,
                              },
                              "image_url": "1",
                              "margins": Object {
                                "left": 10,
                              },
                              "type": "image",
                              "width": Object {
                                "type": "fixed",
                                "value": 100,
                              },
                            },
                          ],
                          "orientation": "horizontal",
                          "type": "container",
                        },
                        Object {
                          "font_size": 28,
                          "font_weight": "medium",
                          "line_height": 36,
                          "text": "Пасмурно.
Ощущается как -5°",
                          "text_color": "#80ffffff",
                          "type": "text",
                        },
                      ],
                      "paddings": Object {
                        "bottom": 24,
                        "left": 24,
                        "right": 24,
                        "top": 24,
                      },
                      "type": "container",
                      "width": Object {
                        "type": "match_parent",
                        "weight": 1,
                      },
                    },
                  ],
                  "margins": Object {
                    "top": 28,
                  },
                  "type": "container",
                  "width": Object {
                    "type": "match_parent",
                  },
                },
              ],
              "margins": Object {
                "left": 28,
              },
              "type": "container",
              "width": Object {
                "type": "match_parent",
              },
            },
            Object {
              "height": Object {
                "type": "match_parent",
              },
              "items": Array [
                Object {
                  "height": Object {
                    "type": "match_parent",
                  },
                  "items": Array [
                    Object {
                      "actions": Array [],
                      "background": Array [
                        Object {
                          "color": "#1aeaf6ec",
                          "type": "solid",
                        },
                      ],
                      "border": Object {
                        "corner_radius": 28,
                      },
                      "height": Object {
                        "type": "match_parent",
                        "weight": 1,
                      },
                      "id": "main_screen_card_0_2",
                      "items": Array [
                        Object {
                          "font_size": 32,
                          "font_weight": "medium",
                          "line_height": 40,
                          "text": "Youtube",
                          "text_color": "#80ffffff",
                          "type": "text",
                        },
                        Object {
                          "delimiter_style": Object {
                            "color": "#0fff",
                          },
                          "height": Object {
                            "type": "match_parent",
                            "weight": 31,
                          },
                          "type": "separator",
                        },
                        Object {
                          "alignment_horizontal": "center",
                          "alignment_vertical": "center",
                          "height": Object {
                            "type": "fixed",
                            "value": 112,
                          },
                          "image_url": "https://dialogs.s3.yandex.net/smart_displays/main-screen/cards/youtube/logo.png",
                          "margins": Object {
                            "top": 31,
                          },
                          "type": "image",
                          "width": Object {
                            "type": "fixed",
                            "value": 161,
                          },
                        },
                        Object {
                          "delimiter_style": Object {
                            "color": "#0fff",
                          },
                          "height": Object {
                            "type": "match_parent",
                            "weight": 56,
                          },
                          "type": "separator",
                        },
                      ],
                      "paddings": Object {
                        "bottom": 24,
                        "left": 24,
                        "right": 24,
                        "top": 24,
                      },
                      "type": "container",
                      "width": Object {
                        "type": "match_parent",
                        "weight": 1,
                      },
                    },
                  ],
                  "margins": Object {
                    "top": 0,
                  },
                  "type": "container",
                  "width": Object {
                    "type": "match_parent",
                  },
                },
                Object {
                  "height": Object {
                    "type": "match_parent",
                  },
                  "items": Array [
                    Object {
                      "actions": Array [],
                      "background": Array [
                        Object {
                          "color": "#1ae6eef9",
                          "type": "solid",
                        },
                        Object {
                          "content_alignment_horizontal": "center",
                          "content_alignment_vertical": "center",
                          "image_url": "https://yastatic.net/s3/dialogs/smart_displays/news/index.png",
                          "preload_required": 1,
                          "scale": "fill",
                          "type": "image",
                        },
                        Object {
                          "color": "#7a121316",
                          "type": "solid",
                        },
                      ],
                      "border": Object {
                        "corner_radius": 28,
                      },
                      "height": Object {
                        "type": "match_parent",
                        "weight": 1,
                      },
                      "id": "main_screen_card_1_2",
                      "items": Array [
                        Object {
                          "items": Array [
                            Object {
                              "font_size": 32,
                              "font_weight": "medium",
                              "line_height": 40,
                              "text": "Медуза",
                              "text_color": "#80ffffff",
                              "type": "text",
                            },
                          ],
                          "orientation": "horizontal",
                          "type": "container",
                        },
                        Object {
                          "delimiter_style": Object {
                            "color": "#0fff",
                          },
                          "height": Object {
                            "type": "match_parent",
                          },
                          "type": "separator",
                        },
                        Object {
                          "font_size": 28,
                          "font_weight": "medium",
                          "line_height": 36,
                          "max_lines": 5,
                          "text": "Tesla начала устанавливать терминалы Starlink на зарядных станциях Supercharger",
                          "text_color": "#e6ffffff",
                          "type": "text",
                        },
                      ],
                      "paddings": Object {
                        "bottom": 24,
                        "left": 24,
                        "right": 24,
                        "top": 24,
                      },
                      "type": "container",
                      "width": Object {
                        "type": "match_parent",
                        "weight": 1,
                      },
                    },
                  ],
                  "margins": Object {
                    "top": 28,
                  },
                  "type": "container",
                  "width": Object {
                    "type": "match_parent",
                  },
                },
              ],
              "margins": Object {
                "left": 28,
              },
              "type": "container",
              "width": Object {
                "type": "match_parent",
              },
            },
          ],
          "orientation": "horizontal",
          "paddings": Object {
            "left": 48,
            "right": 48,
          },
          "type": "container",
          "width": Object {
            "type": "match_parent",
          },
        },
        "state_id": 0,
      },
    ],
  },
  "templates": Object {},
}
`;

exports[`Main screen check snapshot without columns 1`] = `
Object {
  "card": Object {
    "log_id": "mainScreen",
    "states": Array [
      Object {
        "div": Object {
          "background": Array [
            Object {
              "color": "#121316",
              "type": "solid",
            },
          ],
          "height": Object {
            "type": "match_parent",
          },
          "items": Array [],
          "orientation": "horizontal",
          "paddings": Object {
            "left": 48,
            "right": 48,
          },
          "type": "container",
          "width": Object {
            "type": "match_parent",
          },
        },
        "state_id": 0,
      },
    ],
  },
  "templates": Object {},
}
`;

exports[`Main screen check snapshot without rows 1`] = `
Object {
  "card": Object {
    "log_id": "mainScreen",
    "states": Array [
      Object {
        "div": Object {
          "background": Array [
            Object {
              "color": "#121316",
              "type": "solid",
            },
          ],
          "height": Object {
            "type": "match_parent",
          },
          "items": Array [
            Object {
              "height": Object {
                "type": "match_parent",
              },
              "items": Array [],
              "margins": Object {
                "left": 0,
              },
              "type": "container",
              "width": Object {
                "type": "match_parent",
              },
            },
            Object {
              "height": Object {
                "type": "match_parent",
              },
              "items": Array [],
              "margins": Object {
                "left": 28,
              },
              "type": "container",
              "width": Object {
                "type": "match_parent",
              },
            },
            Object {
              "height": Object {
                "type": "match_parent",
              },
              "items": Array [],
              "margins": Object {
                "left": 28,
              },
              "type": "container",
              "width": Object {
                "type": "match_parent",
              },
            },
          ],
          "orientation": "horizontal",
          "paddings": Object {
            "left": 48,
            "right": 48,
          },
          "type": "container",
          "width": Object {
            "type": "match_parent",
          },
        },
        "state_id": 0,
      },
    ],
  },
  "templates": Object {},
}
`;
